<resources>
    <string name="app_name">Finder</string>
    <string name="title_projects">Проекты</string>
    <string name="title_professionals">Специалисты</string>
    <string name="title_profile">Профиль</string>
    <string name="title_notifications">Уведомления</string>
    <string name="auth_login_hint">Логин</string>
    <string name="auth_pass_hint">Пароль</string>
    <string name="auth">Авторизация</string>
    <string name="continue_auth">Продолжить →</string>
    <string name="start_text">Давайте начнем.</string>
    <string name="start_small_text">Зарегистрируйтесь и введите основную информацию, <p> </p>чтобы найти свой проект мечты</string>
    <string name="name_text">Имя</string>
    <string name="surname_text">Фамилия</string>
    <string name="contact_text">Контакты</string>
    <string name="info_text">О себе</string>
    <string name="reg_text">Зарегистрироваться</string>
    <string name="auth_text">Авторизация</string>
    <string name="auth_login_text">Введите свой логин или зарегестрируйтесь, чтобы найти свой проект мечты</string>
    <string name="auth_pass_text">Введите пароль</string>
    <string name="enter">Войти</string>
    <string name="project_title">Project Finder</string>
    <string name="project_address">ул. Колотушкина, д. 13</string>
    <string name="project_work">Можно удаленно</string>
    <string name="point">•</string>
    <string name="project_info">Требуются мобильные разработчики, желательно со стажем коммерческой разработки не менее 80 лет.
        Обязательно знание PowerPoint.Требуются мобильные разработчики, желательно со стажем коммерческой разработки не менее 80 лет.
        Обязательно знание PowerPoint.Требуются мобильные разработчики, желательно со стажем коммерческой разработки не менее 80 лет.
        Обязательно знание PowerPoint.Требуются мобильные разработчики, желательно со стажем коммерческой разработки не менее 80 лет…</string>
    <string name="specialist_name">Василий Пупкин</string>
    <string name="specialist_info">Молодой, прогрессивный разработчик в Excel. В свободное время делаю игры на движке PowerPoint.</string>
    <string name="specialist_location">Россия, Санкт-Петербург</string>
    <string name="specialist_work">Можно удаленно</string>
    <string name="location">Локация</string>
    <string name="text_like">Вас лайкнул этот проект</string>
    <string name="notification">Уведомления</string>
    <string name="number">0</string>
    <string name="reg_auth">Регистрация</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="symbols_count">Количество символов</string>
    <string name="first_symbol">В</string>
    <string name="test_string">Требуются мобильные разработчики</string>
    <string name="edit">Редактировать информацию</string>
    <string name="roboto">Roboto</string>
    <string name="create_projects">Созданные проекты</string>
    <string name="info">Информация</string>
    <string name="info_project">Описание проекта</string>
    <string name="title">Название</string>
    <string name="email">Электронная почта</string>
    <string name="telegram">Telegram</string>
    <string name="site">Веб-сайт</string>
    <string name="sex">Пол</string>
    <string name="birthday">Дата рождения</string>
    <string name="male">Мужской</string>
    <string name="femail">Женский</string>
    <string name="day">День</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="living_place">Место проживания</string>
    <string name="date">дд.мм.гггг</string>
    <string name="location_project">Локация</string>
    <string name="remote">Можно удаленно</string>
    <string name="office">В офисе</string>
    <string name="canRemote">Тип работы</string>
    <string name="projects_finish">Похоже, вы оценили все проекты…</string>
    <string name="specialists_finish">Похоже, вы оценили всех кандидатов…</string>
    <string name="choose_project_1">Выбери проект</string>
    <string name="choose_project_2">к которому хочешь найти специалиста</string>
    <string name="create_new">Создать новый</string>
    <string name="no_wifi">Нет интернет-соединения</string>
    <string name="new_try">Попробуйте повторить позже</string>
    <string name="try_again">Повторить попытку</string>
    <string name="owner_contacts">Контакты создателя проекта</string>
    <string name="exit">Выход</string>
</resources>