<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_projects"
        android:enabled="true"
        android:icon="@drawable/projects_selected"
        android:title="@string/title_projects" />

    <item
        android:id="@+id/navigation_specialists"
        android:enabled="true"
        android:icon="@drawable/specialists_selected"
        android:title="@string/title_professionals" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/profile_selected"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_notifications"
        android:enabled="true"
        android:icon="@drawable/notifications_selected"
        android:title="@string/title_notifications" />

</menu>