<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_text"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/text"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_login_text"
        android:textSize="14sp"
        android:textAlignment="center"
        android:alpha="0.5"
        android:textColor="@color/text"
        android:layout_marginTop="6dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/auth_login_field"
        android:layout_width="327dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:hint="@string/auth_login_hint"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continue_auth_button"
        android:text="@string/continue_auth"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:layout_width="327dp"
        android:letterSpacing="0"
        android:stateListAnimator="@null"
        android:layout_height="62dp"
        android:textColor="@color/white_new"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/reg_auth_button"
        android:text="@string/reg_auth"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:letterSpacing="0"
        android:stateListAnimator="@null"
        app:backgroundTint="@color/white_new"
        android:layout_width="327dp"
        android:layout_height="62dp"
        android:layout_marginTop="4dp"/>

</LinearLayout>