<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/start_text"
            android:textColor="@color/text"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:alpha="0.5"
            android:text="@string/start_small_text"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            android:hint="@string/auth_login_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/auth_pass_hint"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/continue_button"
            android:textColor="@color/white"
            android:text="@string/continue_auth"
            android:textSize="16sp"
            android:radius="15dp"
            android:textAllCaps="false"
            android:letterSpacing="0"
            android:stateListAnimator="@null"
            android:layout_width="327dp"
            android:layout_height="62dp"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/auth_button"
            android:text="@string/auth"
            android:textAllCaps="false"
            android:letterSpacing="0"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:stateListAnimator="@null"
            app:backgroundTint="@color/white_new"
            android:layout_width="327dp"
            android:layout_height="62dp"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
