<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/photo_button"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@drawable/img_circle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="327dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            android:hint="@string/name_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastname_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="327dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            android:hint="@string/surname_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="42dp"
            android:layout_marginTop="16dp"
            android:text="@string/sex"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="43dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/femail_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/femail" />

            <RadioButton
                android:id="@+id/mail_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="42dp"
            android:layout_marginTop="16dp"
            android:text="@string/birthday"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthday_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                android:hint="@string/date">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/birthday_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_calendar_today_24" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            android:hint="@string/living_place">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/continue_button"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_width="327dp"
            android:layout_height="62dp"
            android:layout_marginTop="24dp"
            android:text="@string/continue_auth"
            android:letterSpacing="0"
            android:stateListAnimator="@null"
            android:textColor="@color/white_new" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>