<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:src="@drawable/wifi"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_wifi"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_try"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/try_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/try_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:background="@drawable/new_button"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:textSize="16sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>